fixed spacing on doc browns

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -52,7 +52,7 @@ img {
 
 section {
     padding: 80px 0 80px 0;
-    overflow:hidden;
+    
 }
 
 /* Header Section
@@ -237,11 +237,21 @@ li {
     .none{
         padding-top:0;
     }
-    /* Stops li from floating on technologies
+    /* Stops li from floating on technologies used
     ===================================*/
     .no-float {
         float: none;
     }
+
+
+
+
+
+
+
+
+
+
 
 
 }
